add_executable(run_ksp_ksp_tutorials_1 ex1.c)
target_link_libraries(run_ksp_ksp_tutorials_1 petsc)
ADDTEST(ksp_ksp_tutorials_1_np1_1 1 run_ksp_ksp_tutorials_1 output/ex1_1.out "-ksp_monitor_short -ksp_gmres_cgs_refinement_type refine_always ")
add_executable(run_ksp_ksp_tutorials_1f ex1f.F)
target_link_libraries(run_ksp_ksp_tutorials_1f petsc)
ADDTEST(ksp_ksp_tutorials_1f_np1_1 1 run_ksp_ksp_tutorials_1f output/ex1f_1.out "-ksp_monitor_short -ksp_gmres_cgs_refinement_type refine_always ")
add_executable(run_ksp_ksp_tutorials_2 ex2.c)
target_link_libraries(run_ksp_ksp_tutorials_2 petsc)
ADDTEST(ksp_ksp_tutorials_2_np1_1 1 run_ksp_ksp_tutorials_2 output/ex2_1.out "-ksp_monitor_short -m 5 -n 5 -ksp_gmres_cgs_refinement_type refine_always ")
ADDTEST(ksp_ksp_tutorials_2_np2_2 2 run_ksp_ksp_tutorials_2 output/ex2_2.out "-ksp_monitor_short -m 5 -n 5 -ksp_gmres_cgs_refinement_type refine_always ")
ADDTEST(ksp_ksp_tutorials_2_np2_5 2 run_ksp_ksp_tutorials_2 output/ex2_2.out "-ksp_monitor_short -m 5 -n 5 -mat_view draw -ksp_gmres_cgs_refinement_type refine_always -nox  ")
ADDTEST(ksp_ksp_tutorials_2_np4 4 run_ksp_ksp_tutorials_2 output/ex2_bjacobi.out "-pc_type bjacobi -pc_bjacobi_blocks 1 -ksp_monitor_short -sub_pc_type jacobi -sub_ksp_type gmres ")
ADDTEST(ksp_ksp_tutorials_2_np4_v1 4 run_ksp_ksp_tutorials_2 output/ex2_bjacobi_2.out "-pc_type bjacobi -pc_bjacobi_blocks 2 -ksp_monitor_short -sub_pc_type jacobi -sub_ksp_type gmres -ksp_view ")
ADDTEST(ksp_ksp_tutorials_2_np4_v2 4 run_ksp_ksp_tutorials_2 output/ex2_bjacobi_3.out "-pc_type bjacobi -pc_bjacobi_blocks 4 -ksp_monitor_short -sub_pc_type jacobi -sub_ksp_type gmres ")
ADDTEST(ksp_ksp_tutorials_2_np1 1 run_ksp_ksp_tutorials_2 output/ex2_chebyest_1.out "-m 80 -n 80 -ksp_pc_side right -pc_type ksp -ksp_ksp_type chebyshev -ksp_ksp_max_it 5 -ksp_ksp_chebyshev_esteig 0.9,0,0,1.1 -ksp_monitor_short ")
ADDTEST(ksp_ksp_tutorials_2_np1_v1 1 run_ksp_ksp_tutorials_2 output/ex2_chebyest_2.out "-m 80 -n 80 -ksp_pc_side right -pc_type ksp -ksp_ksp_type chebyshev -ksp_ksp_max_it 5 -ksp_ksp_chebyshev_esteig 0.9,0,0,1.1 -ksp_esteig_ksp_type cg -ksp_monitor_short ")
ADDTEST(ksp_ksp_tutorials_2_np1_v2 1 run_ksp_ksp_tutorials_2 output/ex2_fbcgs.out "-ksp_type fbcgs -pc_type ilu  ")
ADDTEST(ksp_ksp_tutorials_2_np3 3 run_ksp_ksp_tutorials_2 output/ex2_fbcgs_2.out "-ksp_type fbcgsr -pc_type bjacobi ")
add_executable(run_ksp_ksp_tutorials_2f ex2f.F)
target_link_libraries(run_ksp_ksp_tutorials_2f petsc)
ADDTEST(ksp_ksp_tutorials_2f_np2_1 2 run_ksp_ksp_tutorials_2f output/ex2f_1.out "-pc_type jacobi -ksp_monitor_short -ksp_gmres_cgs_refinement_type refine_always ")
add_executable(run_ksp_ksp_tutorials_5 ex5.c)
target_link_libraries(run_ksp_ksp_tutorials_5 petsc)
ADDTEST(ksp_ksp_tutorials_5_np1_1 1 run_ksp_ksp_tutorials_5 output/ex5_1.out "-pc_type jacobi -ksp_monitor_short -ksp_gmres_cgs_refinement_type refine_always ")
ADDTEST(ksp_ksp_tutorials_5_np2_2 2 run_ksp_ksp_tutorials_5 output/ex5_2.out "-pc_type jacobi -ksp_monitor_short -ksp_gmres_cgs_refinement_type refine_always    -ksp_rtol .000001 ")
ADDTEST(ksp_ksp_tutorials_5_np2_5 2 run_ksp_ksp_tutorials_5 output/ex5_5.out "-ksp_gmres_cgs_refinement_type refine_always ")
ADDTEST(ksp_ksp_tutorials_5_np1 1 run_ksp_ksp_tutorials_5 output/ex5_redundant_0.out "-m 1000 -pc_type redundant -pc_redundant_number 1 -redundant_ksp_type gmres -redundant_pc_type jacobi -ksp_rtol 1.e-10 ")
ADDTEST(ksp_ksp_tutorials_5_np5 5 run_ksp_ksp_tutorials_5 output/ex5_redundant.out "-pc_type redundant -pc_redundant_number 1 -redundant_ksp_type gmres -redundant_pc_type jacobi -ksp_rtol 1.e-10 ")
ADDTEST(ksp_ksp_tutorials_5_np5_v1 5 run_ksp_ksp_tutorials_5 output/ex5_redundant.out "-pc_type redundant -pc_redundant_number 3 -redundant_ksp_type gmres -redundant_pc_type jacobi -ksp_rtol 1.e-10 ")
ADDTEST(ksp_ksp_tutorials_5_np5_v2 5 run_ksp_ksp_tutorials_5 output/ex5_redundant.out "-pc_type redundant -pc_redundant_number 5 -redundant_ksp_type gmres -redundant_pc_type jacobi -ksp_rtol 1.e-10 ")
ADDTEST(ksp_ksp_tutorials_5_np5_v3 5 run_ksp_ksp_tutorials_5 output/ex5_redundant.out "-pc_type redundant -pc_redundant_number 3 -redundant_ksp_type gmres -redundant_pc_type jacobi -ksp_rtol 1.e-10 -psubcomm_type interlaced ")
add_executable(run_ksp_ksp_tutorials_7 ex7.c)
target_link_libraries(run_ksp_ksp_tutorials_7 petsc)
ADDTEST(ksp_ksp_tutorials_7_np2_1 2 run_ksp_ksp_tutorials_7 output/ex7_1.out "-ksp_monitor_short -ksp_gmres_cgs_refinement_type refine_always")
ADDTEST(ksp_ksp_tutorials_7_np2_2 2 run_ksp_ksp_tutorials_7 output/ex7_2.out "-ksp_view ")
add_executable(run_ksp_ksp_tutorials_9 ex9.c)
target_link_libraries(run_ksp_ksp_tutorials_9 petsc)
ADDTEST(ksp_ksp_tutorials_9_np1_1 1 run_ksp_ksp_tutorials_9 output/ex9_1.out "-t 2 -pc_type jacobi -ksp_monitor_short -ksp_type gmres -ksp_gmres_cgs_refinement_type refine_always    -s2_ksp_type bcgs -s2_pc_type jacobi -s2_ksp_monitor_short            ")
add_executable(run_ksp_ksp_tutorials_10 ex10.c)
target_link_libraries(run_ksp_ksp_tutorials_10 petsc)
ADDTEST(ksp_ksp_tutorials_10_np2_1 2 run_ksp_ksp_tutorials_10 output/ex10_1.out "-f0 /home/dwirtz/software/opencmiss/src/dependencies/petsc/share/petsc/datafiles/matrices/spd-real-int32-float64 ")
ADDTEST(ksp_ksp_tutorials_10_np2_2 2 run_ksp_ksp_tutorials_10 output/ex10_2.out "-ksp_type bicg    -f0 /home/dwirtz/software/opencmiss/src/dependencies/petsc/share/petsc/datafiles/matrices/medium ")
ADDTEST(ksp_ksp_tutorials_10_np2_3 2 run_ksp_ksp_tutorials_10 output/ex10_3.out "-ksp_type bicg -pc_type asm    -f0 /home/dwirtz/software/opencmiss/src/dependencies/petsc/share/petsc/datafiles/matrices/medium ")
ADDTEST(ksp_ksp_tutorials_10_np1_4 1 run_ksp_ksp_tutorials_10 output/ex10_4.out "-ksp_type bicg -pc_type lu    -f0 /home/dwirtz/software/opencmiss/src/dependencies/petsc/share/petsc/datafiles/matrices/medium ")
ADDTEST(ksp_ksp_tutorials_10_np1_5 1 run_ksp_ksp_tutorials_10 output/ex10_5.out "-ksp_type bicg    -f0 /home/dwirtz/software/opencmiss/src/dependencies/petsc/share/petsc/datafiles/matrices/medium ")
ADDTEST(ksp_ksp_tutorials_10_np1_6 1 run_ksp_ksp_tutorials_10 output/ex10_6.out "-pc_factor_levels 2 -pc_factor_fill 1.73 -ksp_gmres_cgs_refinement_type refine_always    -f0 /home/dwirtz/software/opencmiss/src/dependencies/petsc/share/petsc/datafiles/matrices/fem1 ")
foreach(bs 1 2 3 4 5 6 7)
ADDTEST(ksp_ksp_tutorials_10_np1_7_bs-${bs} 1 run_ksp_ksp_tutorials_10 FALSE "-f0 /home/dwirtz/software/opencmiss/src/dependencies/petsc/share/petsc/datafiles/matrices/medium -viewer_binary_skip_info                     -mat_type seqbaij -matload_block_size ${bs} -ksp_max_it 100 -ksp_gmres_cgs_refinement_type refine_always -ksp_rtol                     1.0e-15 -ksp_monitor_short ")
endforeach()
foreach(bs 1 2 3 4 5 6 7)
ADDTEST(ksp_ksp_tutorials_10_np1_7_v1_bs-${bs} 1 run_ksp_ksp_tutorials_10 FALSE "-f0 /home/dwirtz/software/opencmiss/src/dependencies/petsc/share/petsc/datafiles/matrices/medium -viewer_binary_skip_info                     -mat_type seqbaij -matload_block_size ${bs} -ksp_max_it 100 -ksp_gmres_cgs_refinement_type refine_always -ksp_rtol                     1.0e-15 -ksp_monitor_short -pc_factor_mat_ordering_type nd ")
endforeach()
foreach(bs 1 2 3 4 5 6 7)
ADDTEST(ksp_ksp_tutorials_10_np1_7_v2_bs-${bs} 1 run_ksp_ksp_tutorials_10 FALSE "-f0 /home/dwirtz/software/opencmiss/src/dependencies/petsc/share/petsc/datafiles/matrices/medium -viewer_binary_skip_info                     -mat_type seqbaij -matload_block_size ${bs} -ksp_max_it 100 -ksp_gmres_cgs_refinement_type refine_always -ksp_rtol                     1.0e-15 -ksp_monitor_short -pc_factor_levels 1 ")
endforeach()
foreach(bs 1 2 3 4 5 6 7)
ADDTEST(ksp_ksp_tutorials_10_np1_7_v3_bs-${bs} 1 run_ksp_ksp_tutorials_10 FALSE "-f0 /home/dwirtz/software/opencmiss/src/dependencies/petsc/share/petsc/datafiles/matrices/medium -viewer_binary_skip_info                     -mat_type seqbaij -matload_block_size ${bs} -ksp_type preonly                     -pc_type lu  ")
endforeach()
ADDTEST(ksp_ksp_tutorials_10_np1_8 1 run_ksp_ksp_tutorials_10 output/ex10_8.out "-ksp_diagonal_scale -pc_type eisenstat -ksp_monitor_short -ksp_diagonal_scale_fix    -f0 /home/dwirtz/software/opencmiss/src/dependencies/petsc/share/petsc/datafiles/matrices/medium -ksp_gmres_cgs_refinement_type refine_always  -mat_no_inode ")
foreach(bs 1 2 3 4 5 6 7)
ADDTEST(ksp_ksp_tutorials_10_np1_9_bs-${bs} 1 run_ksp_ksp_tutorials_10 FALSE "-f0 /home/dwirtz/software/opencmiss/src/dependencies/petsc/share/petsc/datafiles/matrices/medium -viewer_binary_skip_info                     -mat_type seqbaij -matload_block_size ${bs} -ksp_max_it 100 -ksp_gmres_cgs_refinement_type refine_always -ksp_rtol                     1.0e-15 -ksp_monitor_short ")
endforeach()
foreach(bs 1 2 3 4 5 6 7)
ADDTEST(ksp_ksp_tutorials_10_np1_9_v1_bs-${bs} 1 run_ksp_ksp_tutorials_10 FALSE "-f0 /home/dwirtz/software/opencmiss/src/dependencies/petsc/share/petsc/datafiles/matrices/medium -ksp_gmres_cgs_refinement_type refine_always -viewer_binary_skip_info                     -mat_type seqbaij -matload_block_size ${bs} -ksp_max_it 100 -ksp_rtol                     1.0e-15 -ksp_monitor_short -trans ")
endforeach()
ADDTEST(ksp_ksp_tutorials_10_np2_10 2 run_ksp_ksp_tutorials_10 output/ex10_10.out " -ksp_type fgmres -pc_type ksp    -f0 /home/dwirtz/software/opencmiss/src/dependencies/petsc/share/petsc/datafiles/matrices/medium -ksp_fgmres_modifypcksp -ksp_monitor_short")
foreach(levels 0 2 4)
ADDTEST(ksp_ksp_tutorials_10_np1_19aij_levels-${levels} 1 run_ksp_ksp_tutorials_10 FALSE "-f0 /home/dwirtz/software/opencmiss/src/dependencies/petsc/share/petsc/datafiles/matrices/poisson1 -ksp_type cg -pc_type icc -pc_factor_levels ${levels} ")
endforeach()
foreach(levels 0 2 4)
ADDTEST(ksp_ksp_tutorials_10_np1_19sbaij_levels-${levels} 1 run_ksp_ksp_tutorials_10 FALSE "-f0 /home/dwirtz/software/opencmiss/src/dependencies/petsc/share/petsc/datafiles/matrices/poisson1 -ksp_type cg -pc_type icc -pc_factor_levels ${levels} -mat_type seqsbaij ")
endforeach()
ADDTEST(ksp_ksp_tutorials_10_np1_superlu_lu_1 1 run_ksp_ksp_tutorials_10 output/ex10_mumps.out "-f0 /home/dwirtz/software/opencmiss/src/dependencies/petsc/share/petsc/datafiles/matrices/small -ksp_type preonly -pc_type lu -pc_factor_mat_solver_package superlu -num_numfac 2 -num_rhs 2 ")
ADDTEST(ksp_ksp_tutorials_10_np1_superlu_lu_2 1 run_ksp_ksp_tutorials_10 output/ex10_mumps.out "-f0 /home/dwirtz/software/opencmiss/src/dependencies/petsc/share/petsc/datafiles/matrices/small -ksp_type preonly -pc_type lu -pc_factor_mat_solver_package superlu_dist -num_numfac 2 -num_rhs 2 ")
ADDTEST(ksp_ksp_tutorials_10_np2_superlu_lu_2 2 run_ksp_ksp_tutorials_10 output/ex10_mumps.out "-f0 /home/dwirtz/software/opencmiss/src/dependencies/petsc/share/petsc/datafiles/matrices/small -ksp_type preonly -pc_type lu -pc_factor_mat_solver_package superlu_dist -num_numfac 2 -num_rhs 2 ")
ADDTEST(ksp_ksp_tutorials_10_np1_mumps_lu_1 1 run_ksp_ksp_tutorials_10 output/ex10_mumps.out "-f0 /home/dwirtz/software/opencmiss/src/dependencies/petsc/share/petsc/datafiles/matrices/small -ksp_type preonly -pc_type lu -mat_type seqaij -pc_factor_mat_solver_package mumps -num_numfac 2 -num_rhs 2 ")
ADDTEST(ksp_ksp_tutorials_10_np2_mumps_lu_2 2 run_ksp_ksp_tutorials_10 output/ex10_mumps.out "-f0 /home/dwirtz/software/opencmiss/src/dependencies/petsc/share/petsc/datafiles/matrices/small -ksp_type preonly -pc_type lu -mat_type mpiaij -pc_factor_mat_solver_package mumps -num_numfac 2 -num_rhs 2 ")
ADDTEST(ksp_ksp_tutorials_10_np1_mumps_lu_3 1 run_ksp_ksp_tutorials_10 output/ex10_mumps.out "-f0 /home/dwirtz/software/opencmiss/src/dependencies/petsc/share/petsc/datafiles/matrices/small -ksp_type preonly -pc_type lu -mat_type seqbaij -pc_factor_mat_solver_package mumps -num_numfac 2 -num_rhs 2 -matload_block_size 2 ")
ADDTEST(ksp_ksp_tutorials_10_np2_mumps_lu_4 2 run_ksp_ksp_tutorials_10 output/ex10_mumps.out "-f0 /home/dwirtz/software/opencmiss/src/dependencies/petsc/share/petsc/datafiles/matrices/small -ksp_type preonly -pc_type lu -mat_type mpibaij -pc_factor_mat_solver_package mumps -num_numfac 2 -num_rhs 2 -matload_block_size 2 ")
ADDTEST(ksp_ksp_tutorials_10_np1_mumps_cholesky_1 1 run_ksp_ksp_tutorials_10 output/ex10_mumps.out "-f0 /home/dwirtz/software/opencmiss/src/dependencies/petsc/share/petsc/datafiles/matrices/small -ksp_type preonly -pc_type cholesky -mat_type sbaij -pc_factor_mat_solver_package mumps -num_numfac 2 -num_rhs 2 -mat_ignore_lower_triangular ")
ADDTEST(ksp_ksp_tutorials_10_np2_mumps_cholesky_2 2 run_ksp_ksp_tutorials_10 output/ex10_mumps.out "-f0 /home/dwirtz/software/opencmiss/src/dependencies/petsc/share/petsc/datafiles/matrices/small -ksp_type preonly -pc_type cholesky -mat_type sbaij -pc_factor_mat_solver_package mumps -num_numfac 2 -num_rhs 2 -mat_ignore_lower_triangular ")
ADDTEST(ksp_ksp_tutorials_10_np1_mumps_cholesky_3 1 run_ksp_ksp_tutorials_10 output/ex10_mumps.out "-f0 /home/dwirtz/software/opencmiss/src/dependencies/petsc/share/petsc/datafiles/matrices/small -ksp_type preonly -pc_type cholesky -mat_type aij -pc_factor_mat_solver_package mumps -num_numfac 2 -num_rhs 2 ")
ADDTEST(ksp_ksp_tutorials_10_np2_mumps_cholesky_4 2 run_ksp_ksp_tutorials_10 output/ex10_mumps.out "-f0 /home/dwirtz/software/opencmiss/src/dependencies/petsc/share/petsc/datafiles/matrices/small -ksp_type preonly -pc_type cholesky -mat_type aij -pc_factor_mat_solver_package mumps -num_numfac 2 -num_rhs 2 ")
ADDTEST(ksp_ksp_tutorials_10_np1_mumps_cholesky_spd_1 1 run_ksp_ksp_tutorials_10 output/ex10_mumps.out "-f0 /home/dwirtz/software/opencmiss/src/dependencies/petsc/share/petsc/datafiles/matrices/small -ksp_type preonly -pc_type cholesky -mat_type aij -matload_spd -pc_factor_mat_solver_package mumps -num_numfac 2 -num_rhs 2 ")
ADDTEST(ksp_ksp_tutorials_10_np2_mumps_cholesky_spd_2 2 run_ksp_ksp_tutorials_10 output/ex10_mumps.out "-f0 /home/dwirtz/software/opencmiss/src/dependencies/petsc/share/petsc/datafiles/matrices/small -ksp_type preonly -pc_type cholesky -mat_type aij -matload_spd -pc_factor_mat_solver_package mumps -num_numfac 2 -num_rhs 2 ")
foreach(nsubcomm 8 7 6 5 4 3 2 1)
ADDTEST(ksp_ksp_tutorials_10_np8_mumps_redundant_nsubcomm-${nsubcomm} 8 run_ksp_ksp_tutorials_10 FALSE "-f0 /home/dwirtz/software/opencmiss/src/dependencies/petsc/share/petsc/datafiles/matrices/medium -ksp_type preonly -pc_type redundant -pc_redundant_number ${nsubcomm} -redundant_pc_factor_mat_solver_package mumps -num_numfac 2 -num_rhs 2 ")
endforeach()
ADDTEST(ksp_ksp_tutorials_10_np1_pastix_lu_1 1 run_ksp_ksp_tutorials_10 output/ex10_mumps.out "-f0 /home/dwirtz/software/opencmiss/src/dependencies/petsc/share/petsc/datafiles/matrices/small -ksp_type preonly -pc_type lu -mat_type seqaij -pc_factor_mat_solver_package pastix -num_numfac 2 -num_rhs 2 ")
ADDTEST(ksp_ksp_tutorials_10_np2_pastix_lu_2 2 run_ksp_ksp_tutorials_10 output/ex10_mumps.out "-f0 /home/dwirtz/software/opencmiss/src/dependencies/petsc/share/petsc/datafiles/matrices/small -ksp_type preonly -pc_type lu -mat_type mpiaij -pc_factor_mat_solver_package pastix -num_numfac 2 -num_rhs 2 ")
ADDTEST(ksp_ksp_tutorials_10_np1_pastix_cholesky_1 1 run_ksp_ksp_tutorials_10 output/ex10_mumps.out "-f0 /home/dwirtz/software/opencmiss/src/dependencies/petsc/share/petsc/datafiles/matrices/small -ksp_type preonly -pc_type cholesky -mat_type sbaij -pc_factor_mat_solver_package pastix -num_numfac 2 -num_rhs 2 -mat_ignore_lower_triangular ")
ADDTEST(ksp_ksp_tutorials_10_np2_pastix_cholesky_2 2 run_ksp_ksp_tutorials_10 output/ex10_mumps.out "-f0 /home/dwirtz/software/opencmiss/src/dependencies/petsc/share/petsc/datafiles/matrices/small -ksp_type preonly -pc_type cholesky -mat_type sbaij -pc_factor_mat_solver_package pastix -num_numfac 2 -num_rhs 2 -mat_ignore_lower_triangular ")
foreach(nsubcomm 8 7 6 5 4 3 2 1)
ADDTEST(ksp_ksp_tutorials_10_np8_pastix_redundant_nsubcomm-${nsubcomm} 8 run_ksp_ksp_tutorials_10 FALSE "-f0 /home/dwirtz/software/opencmiss/src/dependencies/petsc/share/petsc/datafiles/matrices/medium -ksp_type preonly -pc_type redundant -pc_redundant_number ${nsubcomm} -redundant_pc_factor_mat_solver_package pastix -num_numfac 2 -num_rhs 2 ")
endforeach()
foreach(nsubcomm 8 7 6 5 4 3 2 1)
ADDTEST(ksp_ksp_tutorials_10_np8_superlu_dist_redundant_nsubcomm-${nsubcomm} 8 run_ksp_ksp_tutorials_10 FALSE "-f0 /home/dwirtz/software/opencmiss/src/dependencies/petsc/share/petsc/datafiles/matrices/medium -ksp_type preonly -pc_type redundant -pc_redundant_number ${nsubcomm} -redundant_pc_factor_mat_solver_package superlu_dist -num_numfac 2 -num_rhs 2 ")
endforeach()
ADDTEST(ksp_ksp_tutorials_10_np1_20 1 run_ksp_ksp_tutorials_10 output/ex10_cg_singlereduction.out "-f0 /home/dwirtz/software/opencmiss/src/dependencies/petsc/share/petsc/datafiles/matrices/small -mat_type mpisbaij -ksp_type cg -pc_type eisenstat -ksp_monitor_short -ksp_converged_reason ")
ADDTEST(ksp_ksp_tutorials_10_np1_20_v1 1 run_ksp_ksp_tutorials_10 output/ex10_cg_singlereduction.out "-f0 /home/dwirtz/software/opencmiss/src/dependencies/petsc/share/petsc/datafiles/matrices/small -mat_type mpisbaij -ksp_type cg -pc_type eisenstat -ksp_monitor_short -ksp_converged_reason -ksp_cg_single_reduction ")
ADDTEST(ksp_ksp_tutorials_10_np1_seqaijcrl 1 run_ksp_ksp_tutorials_10 output/ex10_seqcrl.out "-f0 /home/dwirtz/software/opencmiss/src/dependencies/petsc/share/petsc/datafiles/matrices/small -ksp_monitor_short -ksp_view -mat_view ascii::ascii_info -mat_type seqaijcrl ")
ADDTEST(ksp_ksp_tutorials_10_np2_mpiaijcrl 2 run_ksp_ksp_tutorials_10 output/ex10_mpiaij.out "-f0 /home/dwirtz/software/opencmiss/src/dependencies/petsc/share/petsc/datafiles/matrices/small -ksp_monitor_short -ksp_view  -mat_type mpiaijcrl ")
ADDTEST(ksp_ksp_tutorials_10_np1_seqaijperm 1 run_ksp_ksp_tutorials_10 output/ex10_seqcsrperm.out "-f0 /home/dwirtz/software/opencmiss/src/dependencies/petsc/share/petsc/datafiles/matrices/small -ksp_monitor_short -ksp_view -mat_view ascii::ascii_info -mat_type seqaijperm ")
ADDTEST(ksp_ksp_tutorials_10_np2_mpiaijperm 2 run_ksp_ksp_tutorials_10 output/ex10_mpicsrperm.out "-f0 /home/dwirtz/software/opencmiss/src/dependencies/petsc/share/petsc/datafiles/matrices/small -ksp_monitor_short -ksp_view  -mat_type mpiaijperm ")
add_executable(run_ksp_ksp_tutorials_12 ex12.c)
target_link_libraries(run_ksp_ksp_tutorials_12 petsc)
ADDTEST(ksp_ksp_tutorials_12_np1_1 1 run_ksp_ksp_tutorials_12 output/ex12_1.out "-ksp_gmres_cgs_refinement_type refine_always ")
add_executable(run_ksp_ksp_tutorials_13 ex13.c)
target_link_libraries(run_ksp_ksp_tutorials_13 petsc)
ADDTEST(ksp_ksp_tutorials_13_np1_1 1 run_ksp_ksp_tutorials_13 output/ex13_1.out "-m 19 -n 20 -ksp_gmres_cgs_refinement_type refine_always ")
add_executable(run_ksp_ksp_tutorials_15 ex15.c)
target_link_libraries(run_ksp_ksp_tutorials_15 petsc)
ADDTEST(ksp_ksp_tutorials_15_np2_1 2 run_ksp_ksp_tutorials_15 output/ex15_1.out "-ksp_view -user_defined_pc -ksp_gmres_cgs_refinement_type refine_always ")
add_executable(run_ksp_ksp_tutorials_15f ex15f.F)
target_link_libraries(run_ksp_ksp_tutorials_15f petsc)
ADDTEST(ksp_ksp_tutorials_15f_np2_1 2 run_ksp_ksp_tutorials_15f output/ex15f_1.out "-ksp_view -user_defined_pc -ksp_gmres_cgs_refinement_type refine_always ")
add_executable(run_ksp_ksp_tutorials_16 ex16.c)
target_link_libraries(run_ksp_ksp_tutorials_16 petsc)
ADDTEST(ksp_ksp_tutorials_16_np2_1 2 run_ksp_ksp_tutorials_16 output/ex16_1.out "-ntimes 4 -ksp_gmres_cgs_refinement_type refine_always ")
add_executable(run_ksp_ksp_tutorials_21f ex21f.F)
target_link_libraries(run_ksp_ksp_tutorials_21f petsc)
ADDTEST(ksp_ksp_tutorials_21f_np1_1 1 run_ksp_ksp_tutorials_21f output/ex21f_1.out " ")
add_executable(run_ksp_ksp_tutorials_23 ex23.c)
target_link_libraries(run_ksp_ksp_tutorials_23 petsc)
ADDTEST(ksp_ksp_tutorials_23_np1_1 1 run_ksp_ksp_tutorials_23 output/ex23_1.out "-ksp_monitor_short -ksp_gmres_cgs_refinement_type refine_always ")
ADDTEST(ksp_ksp_tutorials_23_np3_2 3 run_ksp_ksp_tutorials_23 output/ex23_2.out "-ksp_monitor_short -ksp_gmres_cgs_refinement_type refine_always ")
add_executable(run_ksp_ksp_tutorials_25 ex25.c)
target_link_libraries(run_ksp_ksp_tutorials_25 petsc)
ADDTEST(ksp_ksp_tutorials_25_np1_1 1 run_ksp_ksp_tutorials_25 output/ex25_1.out "-pc_type mg -ksp_type fgmres -da_refine 2 -ksp_monitor_short -mg_levels_ksp_monitor_short -mg_levels_ksp_norm_type unpreconditioned -ksp_view -pc_mg_type full  ")
ADDTEST(ksp_ksp_tutorials_25_np2_2 2 run_ksp_ksp_tutorials_25 output/ex25_2.out "-pc_type mg -ksp_type fgmres -da_refine 2 -ksp_monitor_short -mg_levels_ksp_monitor_short -mg_levels_ksp_norm_type unpreconditioned -ksp_view -pc_mg_type full ")
add_executable(run_ksp_ksp_tutorials_28 ex28.c)
target_link_libraries(run_ksp_ksp_tutorials_28 petsc)
ADDTEST(ksp_ksp_tutorials_28_np1_1 1 run_ksp_ksp_tutorials_28 output/ex28_1.out "-ksp_monitor_short -pc_type mg -pc_mg_type full -ksp_type fgmres -da_refine 2 -mg_levels_ksp_type gmres -mg_levels_ksp_max_it 1 -mg_levels_pc_type ilu ")
add_executable(run_ksp_ksp_tutorials_32 ex32.c)
target_link_libraries(run_ksp_ksp_tutorials_32 petsc)
ADDTEST(ksp_ksp_tutorials_32_np1_1 1 run_ksp_ksp_tutorials_32 output/ex32_1.out "-pc_type mg -pc_mg_type full -ksp_type fgmres -ksp_monitor_short -pc_mg_levels 3 -mg_coarse_pc_factor_shift_type nonzero ")
add_executable(run_ksp_ksp_tutorials_34 ex34.c)
target_link_libraries(run_ksp_ksp_tutorials_34 petsc)
ADDTEST(ksp_ksp_tutorials_34_np1_1 1 run_ksp_ksp_tutorials_34 output/ex34_1.out " -pc_type mg -pc_mg_type full -ksp_type fgmres -ksp_monitor_short -pc_mg_levels 3 -mg_coarse_pc_factor_shift_type nonzero -ksp_view ")
add_executable(run_ksp_ksp_tutorials_43 ex43.c)
target_link_libraries(run_ksp_ksp_tutorials_43 petsc)
ADDTEST(ksp_ksp_tutorials_43_np1_1 1 run_ksp_ksp_tutorials_43 output/ex43_1.out "-stokes_ksp_type fgmres -stokes_ksp_rtol 1e-8 -stokes_pc_type fieldsplit -stokes_pc_fieldsplit_block_size 3 -stokes_pc_fieldsplit_type SYMMETRIC_MULTIPLICATIVE -stokes_pc_fieldsplit_0_fields 0,1 -stokes_pc_fieldsplit_1_fields 2 -stokes_fieldsplit_0_ksp_type preonly -stokes_fieldsplit_0_pc_type lu -stokes_fieldsplit_1_ksp_type preonly -stokes_fieldsplit_1_pc_type jacobi -c_str 0 -solcx_eta0 1.0 -solcx_eta1 1.0e6 -solcx_xc 0.5 -solcx_nz 2 -mx 20 -my 20 -stokes_ksp_monitor_short ")
ADDTEST(ksp_ksp_tutorials_43_np1_2 1 run_ksp_ksp_tutorials_43 output/ex43_1.out "-stokes_ksp_type fgmres -stokes_ksp_rtol 1e-8 -stokes_pc_type fieldsplit -stokes_pc_fieldsplit_block_size 3 -stokes_pc_fieldsplit_type SYMMETRIC_MULTIPLICATIVE -stokes_fieldsplit_u_ksp_type preonly -stokes_fieldsplit_u_pc_type lu -stokes_fieldsplit_p_ksp_type preonly -stokes_fieldsplit_p_pc_type jacobi -c_str 0 -solcx_eta0 1.0 -solcx_eta1 1.0e6 -solcx_xc 0.5 -solcx_nz 2 -mx 20 -my 20 -stokes_ksp_monitor_short ")
ADDTEST(ksp_ksp_tutorials_43_np4_3 4 run_ksp_ksp_tutorials_43 output/ex43_3.out "-stokes_ksp_type gcr -stokes_ksp_gcr_restart 60 -stokes_ksp_norm_type unpreconditioned -stokes_ksp_rtol 1e-8 -c_str 3 -sinker_eta0 1.0 -sinker_eta1 100 -sinker_dx 0.4 -sinker_dy 0.3 -mx 128 -my 128 -stokes_ksp_monitor_short -stokes_pc_type mg -stokes_mg_levels_pc_type fieldsplit -stokes_pc_mg_galerkin -stokes_mg_levels_pc_fieldsplit_block_size 3 -stokes_mg_levels_pc_fieldsplit_0_fields 0,1 -stokes_mg_levels_pc_fieldsplit_1_fields 2 -stokes_mg_levels_fieldsplit_0_pc_type sor -stokes_mg_levels_fieldsplit_1_pc_type sor -stokes_mg_levels_ksp_type chebyshev -stokes_mg_levels_ksp_max_it 1 -stokes_mg_levels_ksp_chebyshev_esteig 0,0.2,0,1.1 -stokes_pc_mg_levels 4 -stokes_ksp_view ")
ADDTEST(ksp_ksp_tutorials_43_np4 4 run_ksp_ksp_tutorials_43 output/ex43_bjacobi.out "-stokes_pc_type bjacobi -stokes_pc_bjacobi_blocks 2 -mat_type aij -stokes_ksp_converged_reason ")
ADDTEST(ksp_ksp_tutorials_43_np4_v1 4 run_ksp_ksp_tutorials_43 output/ex43_bjacobi.out "-stokes_pc_type bjacobi -stokes_pc_bjacobi_blocks 2 -mat_type baij -stokes_ksp_converged_reason ")
ADDTEST(ksp_ksp_tutorials_43_np4_v2 4 run_ksp_ksp_tutorials_43 output/ex43_nested_gmg.out "-mx 16 -my 16 -stokes_ksp_type fgmres -stokes_ksp_rtol 1e-8 -stokes_pc_type fieldsplit -stokes_fieldsplit_u_pc_type mg -stokes_fieldsplit_u_pc_mg_levels 5 -stokes_fieldsplit_u_pc_mg_galerkin -stokes_fieldsplit_u_ksp_type cg -stokes_fieldsplit_u_ksp_rtol 1.0e-4 -stokes_fieldsplit_u_mg_levels_pc_type jacobi -solcx_eta0 1.0e4 -stokes_fieldsplit_u_ksp_converged_reason -stokes_ksp_converged_reason ")
add_executable(run_ksp_ksp_tutorials_45 ex45.c)
target_link_libraries(run_ksp_ksp_tutorials_45 petsc)
ADDTEST(ksp_ksp_tutorials_45_np4_1 4 run_ksp_ksp_tutorials_45 output/ex45_1.out "-pc_type exotic -ksp_monitor_short -ksp_type fgmres -mg_levels_ksp_type gmres -mg_levels_ksp_max_it 1 -mg_levels_pc_type bjacobi ")
ADDTEST(ksp_ksp_tutorials_45_np4_2 4 run_ksp_ksp_tutorials_45 output/ex45_2.out "-ksp_monitor_short -da_grid_x 21 -da_grid_y 21 -da_grid_z 21 -pc_type mg -pc_mg_levels 3 -mg_levels_ksp_type richardson -mg_levels_ksp_max_it 1 -mg_levels_pc_type bjacobi ")
add_executable(run_ksp_ksp_tutorials_45f ex45f.F)
target_link_libraries(run_ksp_ksp_tutorials_45f petsc)
ADDTEST(ksp_ksp_tutorials_45f_np4_1 4 run_ksp_ksp_tutorials_45f output/ex45f_1.out "-ksp_monitor_short -da_refine 5 -pc_type mg -pc_mg_levels 5 -mg_levels_ksp_type chebyshev -mg_levels_ksp_max_it 2 -mg_levels_pc_type jacobi -ksp_pc_side right ")
add_executable(run_ksp_ksp_tutorials_49 ex49.c)
target_link_libraries(run_ksp_ksp_tutorials_49 petsc)
ADDTEST(ksp_ksp_tutorials_49_np1_1 1 run_ksp_ksp_tutorials_49 output/ex49_1.out "-mx 20 -my 30 -elas_ksp_monitor_short -no_view -c_str 3 -sponge_E0 1 -sponge_E1 1000 -sponge_nu0 0.4 -sponge_nu1 0.2 -sponge_t 1 -sponge_w 8 ")
ADDTEST(ksp_ksp_tutorials_49_np4_2 4 run_ksp_ksp_tutorials_49 output/ex49_2.out "-mx 20 -my 30 -elas_ksp_monitor_short -no_view -c_str 3 -sponge_E0 1 -sponge_E1 1000 -sponge_nu0 0.4 -sponge_nu1 0.2 -sponge_t 1 -sponge_w 8 -elas_ksp_type gcr -elas_pc_type asm -elas_sub_pc_type lu ")
ADDTEST(ksp_ksp_tutorials_49_np4_3 4 run_ksp_ksp_tutorials_49 output/ex49_3.out "-mx 20 -my 30 -elas_ksp_monitor_short -no_view -c_str 2 -brick_E 1,10,1000,100 -brick_nu 0.4,0.2,0.3,0.1 -brick_span 3 -elas_pc_type asm -elas_sub_pc_type lu ")
ADDTEST(ksp_ksp_tutorials_49_np3_5 3 run_ksp_ksp_tutorials_49 output/ex49_5.out "-elas_ksp_monitor_short -elas_ksp_converged_reason -elas_ksp_type cg -elas_ksp_norm_type natural -mx 22 -my 22 -c_str 2 -brick_E 1,1e-6,1e-2 -brick_nu .3,.2,.4 -brick_span 8 -elas_pc_type gamg -elas_mg_levels_ksp_type chebyshev -elas_mg_levels_ksp_max_it 1 -elas_mg_levels_ksp_chebyshev_esteig 0.2,1.1 -elas_mg_levels_pc_type jacobi ")
add_executable(run_ksp_ksp_tutorials_52 ex52.c)
target_link_libraries(run_ksp_ksp_tutorials_52 petsc)
ADDTEST(ksp_ksp_tutorials_52_np1 1 run_ksp_ksp_tutorials_52 output/ex52_2.out "-use_petsc_lu ")
ADDTEST(ksp_ksp_tutorials_52_np3 3 run_ksp_ksp_tutorials_52 output/ex52_1.out "-use_mumps_lu ")
ADDTEST(ksp_ksp_tutorials_52_np3_v1 3 run_ksp_ksp_tutorials_52 output/ex52_1.out "-use_mumps_ch ")
ADDTEST(ksp_ksp_tutorials_52_np3_v2 3 run_ksp_ksp_tutorials_52 output/ex52_1.out "-use_mumps_ch -mat_type sbaij ")
ADDTEST(ksp_ksp_tutorials_52_np1_v1 1 run_ksp_ksp_tutorials_52 output/ex52_2.out "-use_superlu_ilu ")
ADDTEST(ksp_ksp_tutorials_52_np1_v2 1 run_ksp_ksp_tutorials_52 output/ex52_2.out "-use_superlu_lu ")
ADDTEST(ksp_ksp_tutorials_52_np2 2 run_ksp_ksp_tutorials_52 output/ex52_2.out "-use_superlu_lu ")
add_executable(run_ksp_ksp_tutorials_53 ex53.c)
target_link_libraries(run_ksp_ksp_tutorials_53 petsc)
ADDTEST(ksp_ksp_tutorials_53_np1 1 run_ksp_ksp_tutorials_53 output/ex53.out "")
ADDTEST(ksp_ksp_tutorials_53_np2 2 run_ksp_ksp_tutorials_53 output/ex53.out "")
add_executable(run_ksp_ksp_tutorials_54 ex54.c)
target_link_libraries(run_ksp_ksp_tutorials_54 petsc)
ADDTEST(ksp_ksp_tutorials_54_np4 4 run_ksp_ksp_tutorials_54 output/ex54_1.out "-ne 49 -alpha 1.e-3 -pc_type gamg -pc_gamg_type agg -pc_gamg_agg_nsmooths 1 -ksp_converged_reason -mg_coarse_ksp_type preonly ")
ADDTEST(ksp_ksp_tutorials_54_np4_v1 4 run_ksp_ksp_tutorials_54 output/ex54_classical.out "-ne 49 -alpha 1.e-3 -pc_type gamg -pc_gamg_type classical -mg_levels_ksp_chebyshev_esteig 0,0.05,0,1.05 -ksp_converged_reason -mg_coarse_ksp_type preonly ")
add_executable(run_ksp_ksp_tutorials_55 ex55.c)
target_link_libraries(run_ksp_ksp_tutorials_55 petsc)
ADDTEST(ksp_ksp_tutorials_55_np4 4 run_ksp_ksp_tutorials_55 output/ex55_sa.out "-ne 29 -alpha 1.e-3 -pc_type gamg -pc_gamg_type agg -pc_gamg_agg_nsmooths 1 -use_coordinates -ksp_converged_reason -mg_coarse_ksp_type preonly ")
ADDTEST(ksp_ksp_tutorials_55_np4_v1 4 run_ksp_ksp_tutorials_55 output/ex55_classical.out "-ne 29 -alpha 1.e-3 -ksp_type gmres -pc_type gamg -pc_gamg_type classical -mg_levels_ksp_max_it 5 -ksp_converged_reason -mg_coarse_ksp_type preonly ")
ADDTEST(ksp_ksp_tutorials_55_np4_v2 4 run_ksp_ksp_tutorials_55 output/ex55_NC.out "-ne 29 -alpha 1.e-3 -pc_type gamg -pc_gamg_type agg -pc_gamg_agg_nsmooths 1 -ksp_converged_reason -mg_coarse_ksp_type preonly ")
add_executable(run_ksp_ksp_tutorials_56 ex56.c)
target_link_libraries(run_ksp_ksp_tutorials_56 petsc)
ADDTEST(ksp_ksp_tutorials_56_np8 8 run_ksp_ksp_tutorials_56 output/ex56_0.out "-ne 11 -alpha 1.e-3 -pc_type gamg -pc_gamg_type agg -pc_gamg_agg_nsmooths 1 -pc_gamg_coarse_eq_limit 10 -pc_gamg_reuse_interpolation true -two_solves -ksp_converged_reason -use_mat_nearnullspace -mg_coarse_ksp_type preonly -pc_gamg_square_graph 1 -mg_levels_ksp_type chebyshev -mg_levels_ksp_chebyshev_esteig 0,0.05,0,1.05 -mg_levels_pc_type sor ")
ADDTEST(ksp_ksp_tutorials_56_np1 1 run_ksp_ksp_tutorials_56 output/ex56_nns.out "-ne 9 -alpha 1.e-3 -ksp_converged_reason -ksp_type cg -ksp_max_it 50 -pc_gamg_type agg -pc_gamg_agg_nsmooths 1 -pc_gamg_coarse_eq_limit 1000 -mg_levels_ksp_type chebyshev -mg_levels_pc_type sor -pc_gamg_reuse_interpolation true -two_solves -use_mat_nearnullspace -mg_coarse_ksp_type preonly ")
add_executable(run_ksp_ksp_tutorials_58 ex58.c)
target_link_libraries(run_ksp_ksp_tutorials_58 petsc)
ADDTEST(ksp_ksp_tutorials_58_np1 1 run_ksp_ksp_tutorials_58 output/ex58.out "-mat_type aij ")
ADDTEST(ksp_ksp_tutorials_58_np1_v1 1 run_ksp_ksp_tutorials_58 output/ex58.out "-mat_type baij ")
ADDTEST(ksp_ksp_tutorials_58_np1_v2 1 run_ksp_ksp_tutorials_58 output/ex58.out "-mat_type sbaij ")
add_executable(run_ksp_ksp_tutorials_59 ex59.c)
target_link_libraries(run_ksp_ksp_tutorials_59 petsc)
ADDTEST(ksp_ksp_tutorials_59_np4 4 run_ksp_ksp_tutorials_59 output/ex59_1.out "-nex 7 ")
ADDTEST(ksp_ksp_tutorials_59_np4_2 4 run_ksp_ksp_tutorials_59 output/ex59_2.out "-npx 2 -npy 2 -nex 2 -ney 2 ")
ADDTEST(ksp_ksp_tutorials_59_np4_3 4 run_ksp_ksp_tutorials_59 output/ex59_3.out "-npx 2 -npy 2 -npz 1 -nex 2 -ney 2 -nez 1 ")
add_executable(run_ksp_ksp_tutorials_60 ex60.c)
target_link_libraries(run_ksp_ksp_tutorials_60 petsc)
ADDTEST(ksp_ksp_tutorials_60_np2_1 2 run_ksp_ksp_tutorials_60 output/ex60_1.out "-ksp_monitor_short -ksp_rtol 1e-6 -diagfunc 1 -ksp_type fcg -ksp_fcg_mmax 1 -eta 0.1 ")
add_executable(run_ksp_ksp_tutorials_62 ex62.c)
target_link_libraries(run_ksp_ksp_tutorials_62 petsc)
ADDTEST(ksp_ksp_tutorials_62_np1 1 run_ksp_ksp_tutorials_62 output/ex62_2D_1.out "-M 7 -N 9 -user_set_subdomains -Mdomains 1 -Ndomains 3 -overlap 1 -print_error -pc_gasm_print_subdomains ")
ADDTEST(ksp_ksp_tutorials_62_np2 2 run_ksp_ksp_tutorials_62 output/ex62_2D_2.out "-M 7 -N 9 -user_set_subdomains -Mdomains 1 -Ndomains 3 -overlap 1 -print_error -pc_gasm_print_subdomains ")
ADDTEST(ksp_ksp_tutorials_62_np3 3 run_ksp_ksp_tutorials_62 output/ex62_2D_3.out "-M 7 -N 9 -user_set_subdomains -Mdomains 1 -Ndomains 3 -overlap 1 -print_error -pc_gasm_print_subdomains ")
ADDTEST(ksp_ksp_tutorials_62_np1_v1 1 run_ksp_ksp_tutorials_62 output/ex62_superlu_dist_1.out "-M 7 -N 9 -print_error -pc_gasm_total_subdomains 1 -pc_gasm_print_subdomains -sub_pc_type lu -sub_pc_factor_mat_solver_package superlu_dist ")
ADDTEST(ksp_ksp_tutorials_62_np2_v1 2 run_ksp_ksp_tutorials_62 output/ex62_superlu_dist_2.out "-M 7 -N 9 -print_error -pc_gasm_total_subdomains 1 -pc_gasm_print_subdomains -sub_pc_type lu -sub_pc_factor_mat_solver_package superlu_dist ")
ADDTEST(ksp_ksp_tutorials_62_np3_v1 3 run_ksp_ksp_tutorials_62 output/ex62_superlu_dist_3.out "-M 7 -N 9 -print_error -pc_gasm_total_subdomains 2 -pc_gasm_print_subdomains -sub_pc_type lu -sub_pc_factor_mat_solver_package superlu_dist ")
ADDTEST(ksp_ksp_tutorials_62_np4 4 run_ksp_ksp_tutorials_62 output/ex62_superlu_dist_4.out "-M 7 -N 9 -print_error -pc_gasm_total_subdomains 2 -pc_gasm_print_subdomains -sub_pc_type lu -sub_pc_factor_mat_solver_package superlu_dist ")
