add_executable(run_ksp_pc_tests_1 ex1.c)
target_link_libraries(run_ksp_pc_tests_1 petsc)
ADDTEST(ksp_pc_tests_1_np1_1 1 run_ksp_pc_tests_1 output/ex1_1.out "")
add_executable(run_ksp_pc_tests_2 ex2.c)
target_link_libraries(run_ksp_pc_tests_2 petsc)
ADDTEST(ksp_pc_tests_2_np1_1 1 run_ksp_pc_tests_2 output/ex2_1.out "-ksp_type cg -ksp_monitor_short ")
add_executable(run_ksp_pc_tests_3 ex3.c)
target_link_libraries(run_ksp_pc_tests_3 petsc)
ADDTEST(ksp_pc_tests_3_np1_1 1 run_ksp_pc_tests_3 output/ex3_1.out "-ksp_type gmres -ksp_monitor_short -pc_type sor     -pc_sor_symmetric ")
add_executable(run_ksp_pc_tests_5 ex5.c)
target_link_libraries(run_ksp_pc_tests_5 petsc)
ADDTEST(ksp_pc_tests_5_np1_1 1 run_ksp_pc_tests_5 output/ex5_1.out "")
