add_executable(run_vec_vec_tests_1 ex1.c)
target_link_libraries(run_vec_vec_tests_1 petsc)
ADDTEST(vec_vec_tests_1_np1_1 1 run_vec_vec_tests_1 output/ex1_1.out "")
add_executable(run_vec_vec_tests_2 ex2.c)
target_link_libraries(run_vec_vec_tests_2 petsc)
ADDTEST(vec_vec_tests_2_np1_1 1 run_vec_vec_tests_2 output/ex2_1.out "")
add_executable(run_vec_vec_tests_3 ex3.c)
target_link_libraries(run_vec_vec_tests_3 petsc)
ADDTEST(vec_vec_tests_3_np2_1 2 run_vec_vec_tests_3 output/ex3_1.out "")
ADDTEST(vec_vec_tests_3_np2_2 2 run_vec_vec_tests_3 output/ex3_2.out "-vec_view ascii::ascii_info ")
add_executable(run_vec_vec_tests_4 ex4.c)
target_link_libraries(run_vec_vec_tests_4 petsc)
ADDTEST(vec_vec_tests_4_np2_1 2 run_vec_vec_tests_4 output/ex4_1.out "")
add_executable(run_vec_vec_tests_6 ex6.c)
target_link_libraries(run_vec_vec_tests_6 petsc)
ADDTEST(vec_vec_tests_6_np1_1 1 run_vec_vec_tests_6 output/ex6_1.out "")
add_executable(run_vec_vec_tests_7 ex7.c)
target_link_libraries(run_vec_vec_tests_7 petsc)
ADDTEST(vec_vec_tests_7_np1_1 1 run_vec_vec_tests_7 output/ex7_1.out "")
add_executable(run_vec_vec_tests_8 ex8.c)
target_link_libraries(run_vec_vec_tests_8 petsc)
ADDTEST(vec_vec_tests_8_np1_1 1 run_vec_vec_tests_8 output/ex8_1.out "")
add_executable(run_vec_vec_tests_9 ex9.c)
target_link_libraries(run_vec_vec_tests_9 petsc)
ADDTEST(vec_vec_tests_9_np2_1 2 run_vec_vec_tests_9 output/ex9_1.out "")
add_executable(run_vec_vec_tests_10 ex10.c)
target_link_libraries(run_vec_vec_tests_10 petsc)
ADDTEST(vec_vec_tests_10_np2_1 2 run_vec_vec_tests_10 output/ex10_1.out "")
add_executable(run_vec_vec_tests_11 ex11.c)
target_link_libraries(run_vec_vec_tests_11 petsc)
ADDTEST(vec_vec_tests_11_np2_1 2 run_vec_vec_tests_11 output/ex11_1.out "")
add_executable(run_vec_vec_tests_12 ex12.c)
target_link_libraries(run_vec_vec_tests_12 petsc)
ADDTEST(vec_vec_tests_12_np2_1 2 run_vec_vec_tests_12 output/ex12_1.out "")
add_executable(run_vec_vec_tests_14 ex14.c)
target_link_libraries(run_vec_vec_tests_14 petsc)
ADDTEST(vec_vec_tests_14_np2_1 2 run_vec_vec_tests_14 output/ex14_1.out "")
add_executable(run_vec_vec_tests_15 ex15.c)
target_link_libraries(run_vec_vec_tests_15 petsc)
ADDTEST(vec_vec_tests_15_np1_1 1 run_vec_vec_tests_15 output/ex15_1.out "")
add_executable(run_vec_vec_tests_16 ex16.c)
target_link_libraries(run_vec_vec_tests_16 petsc)
ADDTEST(vec_vec_tests_16_np2_1 2 run_vec_vec_tests_16 output/ex16_1.out "")
add_executable(run_vec_vec_tests_17 ex17.c)
target_link_libraries(run_vec_vec_tests_17 petsc)
ADDTEST(vec_vec_tests_17_np2_1 2 run_vec_vec_tests_17 output/ex17_1.out "")
add_executable(run_vec_vec_tests_17f ex17f.F)
set_target_properties(run_vec_vec_tests_17f PROPERTIES LINKER_LANGUAGE Fortran) # For Intel compiler 2017.4.196
target_link_libraries(run_vec_vec_tests_17f petsc)
ADDTEST(vec_vec_tests_17f_np3_1 3 run_vec_vec_tests_17f output/ex17f_1.out "")
add_executable(run_vec_vec_tests_21 ex21.c)
target_link_libraries(run_vec_vec_tests_21 petsc)
ADDTEST(vec_vec_tests_21_np1_1 1 run_vec_vec_tests_21 output/ex21_1.out "")
ADDTEST(vec_vec_tests_21_np2_2 2 run_vec_vec_tests_21 output/ex21_2.out "")
add_executable(run_vec_vec_tests_22 ex22.c)
target_link_libraries(run_vec_vec_tests_22 petsc)
ADDTEST(vec_vec_tests_22_np4_1 4 run_vec_vec_tests_22 output/ex22_1.out "")
add_executable(run_vec_vec_tests_23 ex23.c)
target_link_libraries(run_vec_vec_tests_23 petsc)
ADDTEST(vec_vec_tests_23_np2_1 2 run_vec_vec_tests_23 output/ex23_1.out "")
add_executable(run_vec_vec_tests_24 ex24.c)
target_link_libraries(run_vec_vec_tests_24 petsc)
ADDTEST(vec_vec_tests_24_np3_1 3 run_vec_vec_tests_24 output/ex24_1.out "")
add_executable(run_vec_vec_tests_25 ex25.c)
target_link_libraries(run_vec_vec_tests_25 petsc)
ADDTEST(vec_vec_tests_25_np3_1 3 run_vec_vec_tests_25 output/ex25_1.out "")
add_executable(run_vec_vec_tests_29 ex29.c)
target_link_libraries(run_vec_vec_tests_29 petsc)
ADDTEST(vec_vec_tests_29_np3_1 3 run_vec_vec_tests_29 output/ex29_1.out "-n 126 ")
add_executable(run_vec_vec_tests_30f ex30f.F)
set_target_properties(run_vec_vec_tests_30f PROPERTIES LINKER_LANGUAGE Fortran) # For Intel compiler 2017.4.196
target_link_libraries(run_vec_vec_tests_30f petsc)
ADDTEST(vec_vec_tests_30f_np4_1 4 run_vec_vec_tests_30f output/ex30f_1.out "")
add_executable(run_vec_vec_tests_33 ex33.c)
target_link_libraries(run_vec_vec_tests_33 petsc)
ADDTEST(vec_vec_tests_33_np4_1 4 run_vec_vec_tests_33 output/ex33_1.out "")
add_executable(run_vec_vec_tests_34 ex34.c)
target_link_libraries(run_vec_vec_tests_34 petsc)
ADDTEST(vec_vec_tests_34_np1_1 1 run_vec_vec_tests_34 FALSE "")
add_executable(run_vec_vec_tests_36 ex36.c)
target_link_libraries(run_vec_vec_tests_36 petsc)
ADDTEST(vec_vec_tests_36_np2_1 2 run_vec_vec_tests_36 output/ex36_1.out "-set_option_negidx -set_values_negidx -get_values_negidx ")
add_executable(run_vec_vec_tests_37 ex37.c)
target_link_libraries(run_vec_vec_tests_37 petsc)
ADDTEST(vec_vec_tests_37_np1_1 1 run_vec_vec_tests_37 output/ex37_1.out "-explicit_is 0 ")
ADDTEST(vec_vec_tests_37_np1_1_v1 1 run_vec_vec_tests_37 output/ex37_1.out "-explicit_is 1 ")
ADDTEST(vec_vec_tests_37_np2_2 2 run_vec_vec_tests_37 output/ex37_3.out "-explicit_is 0 ")
ADDTEST(vec_vec_tests_37_np2_2_v1 2 run_vec_vec_tests_37 output/ex37_4.out "-explicit_is 1 ")
add_executable(run_vec_vec_tests_38 ex38.c)
target_link_libraries(run_vec_vec_tests_38 petsc)
ADDTEST(vec_vec_tests_38_np3_1 3 run_vec_vec_tests_38 output/ex38_1.out "")
add_executable(run_vec_vec_tests_45 ex45.c)
target_link_libraries(run_vec_vec_tests_45 petsc)
ADDTEST(vec_vec_tests_45_np2 2 run_vec_vec_tests_45 output/ex45_1.out " ")
add_executable(run_vec_vec_tests_46 ex46.c)
target_link_libraries(run_vec_vec_tests_46 petsc)
ADDTEST(vec_vec_tests_46_np1 1 run_vec_vec_tests_46 output/ex46_1_p1.out "")
ADDTEST(vec_vec_tests_46_np6 6 run_vec_vec_tests_46 output/ex46_1_p6.out "")
ADDTEST(vec_vec_tests_46_np12 12 run_vec_vec_tests_46 output/ex46_1_p12.out "")
ADDTEST(vec_vec_tests_46_np6_v1 6 run_vec_vec_tests_46 output/ex46_2_p6.out "-usempiio ")
