add_executable(run_vec_vec_tutorials_1 ex1.c)
target_link_libraries(run_vec_vec_tutorials_1 petsc)
ADDTEST(vec_vec_tutorials_1_np1_1 1 run_vec_vec_tutorials_1 output/ex1_1.out "")
add_executable(run_vec_vec_tutorials_2 ex2.c)
target_link_libraries(run_vec_vec_tutorials_2 petsc)
ADDTEST(vec_vec_tutorials_2_np2_1 2 run_vec_vec_tutorials_2 output/ex2_1.out "")
add_executable(run_vec_vec_tutorials_4f ex4f.F)
target_link_libraries(run_vec_vec_tutorials_4f petsc)
ADDTEST(vec_vec_tutorials_4f_np1_1 1 run_vec_vec_tutorials_4f output/ex4f_1.out "")
add_executable(run_vec_vec_tutorials_5 ex5.c)
target_link_libraries(run_vec_vec_tutorials_5 petsc)
ADDTEST(vec_vec_tutorials_5_np1_1 1 run_vec_vec_tutorials_5 output/ex5_1.out "")
ADDTEST(vec_vec_tutorials_5_np2_2 2 run_vec_vec_tutorials_5 output/ex5_2.out "")
add_executable(run_vec_vec_tutorials_6 ex6.c)
target_link_libraries(run_vec_vec_tutorials_6 petsc)
ADDTEST(vec_vec_tutorials_6_np1_1 1 run_vec_vec_tutorials_6 output/ex6_1.out "")
add_executable(run_vec_vec_tutorials_7 ex7.c ex7f.F)
target_link_libraries(run_vec_vec_tutorials_7 petsc)
ADDTEST(vec_vec_tutorials_7_np3_1 3 run_vec_vec_tutorials_7 output/ex7_1.out "| sort ")
add_executable(run_vec_vec_tutorials_8 ex8.c)
target_link_libraries(run_vec_vec_tutorials_8 petsc)
ADDTEST(vec_vec_tutorials_8_np4_1 4 run_vec_vec_tutorials_8 output/ex8_1.out "")
add_executable(run_vec_vec_tutorials_9 ex9.c)
target_link_libraries(run_vec_vec_tutorials_9 petsc)
ADDTEST(vec_vec_tutorials_9_np2_1 2 run_vec_vec_tutorials_9 output/ex9_1.out "")
ADDTEST(vec_vec_tutorials_9_np2_2 2 run_vec_vec_tutorials_9 output/ex9_1.out "-allocate ")
add_executable(run_vec_vec_tutorials_9f ex9f.F)
target_link_libraries(run_vec_vec_tutorials_9f petsc)
ADDTEST(vec_vec_tutorials_9f_np2_1 2 run_vec_vec_tutorials_9f output/ex9f_1.out "")
ADDTEST(vec_vec_tutorials_9f_np2_1_v1 2 run_vec_vec_tutorials_9f output/ex9f_1.out "-allocate ")
add_executable(run_vec_vec_tutorials_10 ex10.c)
target_link_libraries(run_vec_vec_tutorials_10 petsc)
ADDTEST(vec_vec_tutorials_10_np2_1 2 run_vec_vec_tutorials_10 output/ex10_1.out "-binary ")
ADDTEST(vec_vec_tutorials_10_np3_2 3 run_vec_vec_tutorials_10 output/ex10_2.out "-binary ")
ADDTEST(vec_vec_tutorials_10_np5_3 5 run_vec_vec_tutorials_10 output/ex10_3.out "-binary ")
