add_executable(run_vec_is_ao_tests_1 ex1.c)
target_link_libraries(run_vec_is_ao_tests_1 petsc)
ADDTEST(vec_is_ao_tests_1_np1_1 1 run_vec_is_ao_tests_1 output/ex1_1.out "")
ADDTEST(vec_is_ao_tests_1_np2_2 2 run_vec_is_ao_tests_1 output/ex1_2.out "")
ADDTEST(vec_is_ao_tests_1_np3_3 3 run_vec_is_ao_tests_1 output/ex1_3.out "")
add_executable(run_vec_is_ao_tests_2 ex2.c)
target_link_libraries(run_vec_is_ao_tests_2 petsc)
ADDTEST(vec_is_ao_tests_2_np1_1 1 run_vec_is_ao_tests_2 output/ex2_1.out "")
ADDTEST(vec_is_ao_tests_2_np2_2 2 run_vec_is_ao_tests_2 output/ex2_2.out "")
ADDTEST(vec_is_ao_tests_2_np3_3 3 run_vec_is_ao_tests_2 output/ex2_3.out "")
add_executable(run_vec_is_ao_tests_4 ex4.c)
target_link_libraries(run_vec_is_ao_tests_4 petsc)
ADDTEST(vec_is_ao_tests_4_np1_1 1 run_vec_is_ao_tests_4 output/ex4_1.out "")
ADDTEST(vec_is_ao_tests_4_np2_1 2 run_vec_is_ao_tests_4 output/ex4_1.out "")
add_executable(run_vec_is_ao_tests_7 ex7.c)
target_link_libraries(run_vec_is_ao_tests_7 petsc)
ADDTEST(vec_is_ao_tests_7_np2_1 2 run_vec_is_ao_tests_7 output/ex7_1.out "")
