add_executable(run_vec_is_is_tutorials_1 ex1.c)
target_link_libraries(run_vec_is_is_tutorials_1 petsc)
ADDTEST(vec_is_is_tutorials_1_np1 1 run_vec_is_is_tutorials_1 output/ex1.out " ")
add_executable(run_vec_is_is_tutorials_1f ex1f.F)
target_link_libraries(run_vec_is_is_tutorials_1f petsc)
ADDTEST(vec_is_is_tutorials_1f_np1 1 run_vec_is_is_tutorials_1f output/ex1f.out " ")
add_executable(run_vec_is_is_tutorials_2 ex2.c)
target_link_libraries(run_vec_is_is_tutorials_2 petsc)
ADDTEST(vec_is_is_tutorials_2_np1 1 run_vec_is_is_tutorials_2 output/ex2.out " ")
add_executable(run_vec_is_is_tutorials_2f ex2f.F)
target_link_libraries(run_vec_is_is_tutorials_2f petsc)
ADDTEST(vec_is_is_tutorials_2f_np1 1 run_vec_is_is_tutorials_2f output/ex2f.out " ")
add_executable(run_vec_is_is_tutorials_3 ex3.c)
target_link_libraries(run_vec_is_is_tutorials_3 petsc)
ADDTEST(vec_is_is_tutorials_3_np1 1 run_vec_is_is_tutorials_3 output/ex3.out " ")
add_executable(run_vec_is_is_tutorials_4 ex4.c)
target_link_libraries(run_vec_is_is_tutorials_4 petsc)
ADDTEST(vec_is_is_tutorials_4_np1 1 run_vec_is_is_tutorials_4 output/ex4_1.out " ")
add_executable(run_vec_is_is_tutorials_5 ex5.c)
target_link_libraries(run_vec_is_is_tutorials_5 petsc)
ADDTEST(vec_is_is_tutorials_5_np1 1 run_vec_is_is_tutorials_5 output/ex5_1.out " ")
